Added support for demo mode to save race stats and auto-saves.  This is marginally dangerous as demo races could contaminate real race data if there's a bug, but it makes manually testing these features easier and thus proably safer.